feat: concluindo rotas de CRUD para casos, evidências e usuário
